# bird-submission

./: 70b.txt  8b.txt  README.md  convert_format.py  create-daemon.sh  large.txt  prepare-eval.sh  pyproject.toml  run-eval.sh  run-inference.sh  sanity_check.sh  small-prepare-eval.sh  small.txt
public/: db_utils.py  example_utils.py  io_utils.py  misc_utils.py  run.py
