[tool.poetry]
name = "bird-submission"
version = "0.0.1"
description = ""
authors = [ "Minions <contact@minions.farm>" ]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "4.40.1"
absl-py = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
